--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,10 +1,18 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+html, body, iframe {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 .tb-lesson-row {
   &:hover {
     cursor: pointer;
   }
 }
+
 #video-player {
   @extend .position-relative;
   @extend .bg-dark;
