--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,6 @@
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./variables";
+@import "~bootstrap/scss/bootstrap";
+@import "./bootswatch";
 
 html, body, iframe {
   width: 100%;
